--- a/style/style.css
+++ b/style/style.css
@@ -9,10 +9,17 @@
 /* shair color style*/
 .dark-2{
     color: rgb(66, 66, 66);
+    
+}
+*{
+    margin: 0px;
+}
+body{
+    width: 100%;
 }
 /*Header Style Start*/
 .heading{
-    width: 1891px;
+    width: 100%px;
     height: 1370px;
     background: rgba(255, 144, 14, 0.1);   
 }
@@ -27,6 +34,7 @@
     margin-left: 200px;
     margin-top: 50px;
 }
+
 .nav-content{
     display: flex;
     flex-direction: row;
@@ -57,6 +65,7 @@
     font-weight: 400;
     line-height: 26px;
     text-align: center;
+    margin-top: 15px;
     margin-bottom: 30px;
 }
 .btn-primary{
@@ -66,6 +75,7 @@
     border-radius: 8px;
     border: none;
     font-size: 1.1rem;  
+    margin-top: 20px;
 }
 .btn button{
     margin-left: 47%;
@@ -121,8 +131,71 @@
     color:rgb(255, 144, 14);
 }
 /*End Gallery features style*/
+
+/* Enjoy start */
+.enjoy-container{
+    width: 70%;
+    position: absolute;
+    height: 1059px;
+    margin-top:40px;
+    margin-left: 280px;
+    margin-right: 300px; 
+    
+}
+.enjoy-content h2{
+    color: rgb(19, 19, 19);
+    font-size: 2.9rem;
+    font-weight: 700;
+    line-height: 53px;
+    padding-top: 35px;
+    padding-left: 26px;
+}
+.enjoy-content p{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.enjoy-content{
+    margin-right: 146px;   
+}
+.enjoy-item{
+    box-sizing: border-box; 
+    padding: 10px 35px;
+    margin-bottom: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+}
+.enjoy-item h4{
+    font-size: 1.1rem;
+    font-weight: 600;
+    line-height: 23px;
+}
+.enjoy-item p{
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: start;
+    margin-top: 10px;
+}
+.picture img{
+    width: 708px;
+    height: 1050px;
+    margin-bottom: 40px ;
+}
+.enjoy-flex{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+/* Enjoy End */
 /*Responsive with Mobile*/
 @media screen and (max-width:576px) {
+    *{
+        margin: 0px;
+    }
     .nav-content{
         flex-direction: column; 
     }
@@ -173,6 +246,29 @@
         margin-top: 7px;
         margin-left: 6px;
     }
+    .enjoy-flex {
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+    }
+    .picture img {
+        width: 405px;
+        height: 550px;
+        margin-bottom: 40px;
+        margin-right: 0px;
+        align-items: center;
+    }
+    .enjoy-container {
+        width: 100%;
+        height: 1059px;
+        margin-top: 20px;
+        margin-left: 150px;
+        margin-right: 0px;
+        align-items: center;
+    }
+    .enjoy-content {
+        margin-right: 0px;
+    }
     
        
     
@@ -213,5 +309,18 @@
         margin-left: 0px;
         margin-right: 0px;
     } 
+    .enjoy-flex {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .picture img {
+        width: 805px;
+        height: 750px;
+        margin-bottom: 40px;
+        margin-right: 4px;
+        align-items: center;
+    }
 }
 
